Inclusão do botão nova lista

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
+                <button class="button-reset" onclick="novaLista()" aria-label="Nova lista de amigos">
+                    <img src="assets/reiniciar.png" alt="Ícone para sortear">
+                    Nova lista
+                </button>
             </div>
         </section>
     </main>
